# oss_preprocessor

./: Cargo.toml  README.md
src/: main.rs
src/configs/: allowed_files.json
src/entities/: date.rs  diff.rs  github.rs  mod.rs  npm.rs  package.rs  pipfile.rs  poetry.rs  pypi.rs
src/external_apis/: error.rs  github.rs  mod.rs  npm.rs  pypi.rs
src/parsers/: diff.rs  error.rs  mod.rs  pipfile.rs  poetry.rs  yarn.rs
src/parsers/lockfile/: mod.rs  pipfile.rs  poetry.rs  yarn.rs
