[package]
name = "oss_preprocessor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.7", features = ["derive"] }
regex = "1.10.2"
reqwest = { version = "0.11.22", features = ["json"] }
#rustpython = "0.3.0"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.107"
structopt = "0.3.26"
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["full"] }
toml = "0.8.6"
